# mcp-ai-foundation

./: .gitignore  AGENTS.md  AI-AWARENESS.md  ARCHITECTURE.md  CHANGELOG.md  GETTING_STARTED.md  IMPROVEMENT_ROADMAP.md  INSTALL.md  LICENSE  OPTIMIZATION_GUIDE.md  PHILOSOPHY.md  QUICK-REFERENCE.md  README.md  ai_foundation_server.py  async_utils.py  benchmark_results.json  compression_utils.py  docker-compose.postgres.yml  docker-compose.yml  init-postgres.sql  install.bat  install.ps1  install.py  install.sh  mcp_shared.py  notebook_main.py  notebook_shared.py  notebook_storage.py  package.json  performance_utils.py  pyproject.toml  redis.conf  requirements-dev.txt  requirements-redis.txt  requirements.txt  run_postgres_tests.bat  setup.py  start_health_monitor.bat  start_health_monitor.sh  storage_adapter.py  (+15 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  release.yml  test.yml
configs/: claude_desktop_config.json  claude_desktop_config_mac.json  claude_example.json  mcp_registry.json
docs/: AI-USAGE.md  ARCHITECTURE.md  FAQ.md  INSTALLATION.md  TROUBLESHOOTING.md  index.html  notebook.md  task_manager.md  teambook.md  world.md
examples/: ai_system_prompt.md  basic_usage.py  session_workflow.md  v3_features_showcase.md
src/: __init__.py  mcp_shared.py  notebook_main.py  notebook_mcp.py  notebook_shared.py  notebook_storage.py  task_manager.py  task_manager_mcp.py  teambook_api.py  teambook_api_mcp.py  teambook_bridge.py  teambook_main.py  teambook_main_mcp.py  teambook_mcp.py  teambook_shared.py  teambook_shared_mcp.py  teambook_storage.py  teambook_storage_adapter.py  teambook_storage_mcp.py  world.py  world_mcp.py
src/teambook/: __init__.py  __main__.py  cli.py  config.py  core.py  crypto.py  database.py  http_server.py  mcp_server.py  models.py
tests/: test_all.py
