[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-ai-foundation"
version = "1.0.0"
description = "Essential MCP tools giving AIs memory, temporal grounding, and task accountability"
readme = "README.md"
authors = [
    {name = "QD25565", email = "162400468+QD25565@users.noreply.github.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
"Homepage" = "https://github.com/QD25565/mcp-ai-foundation"
"Bug Reports" = "https://github.com/QD25565/mcp-ai-foundation/issues"
"Source" = "https://github.com/QD25565/mcp-ai-foundation"

[project.scripts]
notebook-mcp = "notebook_mcp:main"
world-mcp = "world_mcp:main"
task-manager-mcp = "task_manager_mcp:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100