[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-ai-foundation"
version = "1.0.0"
description = "Production-ready MCP tools for AI assistants"
readme = "README.md"
authors = [
    {name = "Claude Opus 4.1 & QD25565"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0"
]

[project.urls]
Homepage = "https://github.com/QD25565/mcp-ai-foundation"
Repository = "https://github.com/QD25565/mcp-ai-foundation"
Issues = "https://github.com/QD25565/mcp-ai-foundation/issues"

[project.scripts]
notebook-mcp = "src.notebook_mcp:main"
task-manager-mcp = "src.task_manager_mcp:main"
teambook-mcp = "src.teambook_mcp:main"
world-mcp = "src.world_mcp:main"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["*.py"]